--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,94 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# ==========================
+# Java (IntelliJ IDEA)
+# ==========================
+
+# IntelliJ project files
 .idea/
 *.iml
+*.ipr
+*.iws
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Compiled class files
+*.class
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Java package distributions
+*.jar
+*.war
+*.ear
 
-### VS Code ###
+# JVM crash logs
+hs_err_pid*
+replay_pid*
+
+# Gradle
+.gradle/
+build/
+!gradle-wrapper.jar
+
+# Maven
+target/
+
+# IntelliJ build output
+out/
+
+# ==========================
+# C / C++ (VS Code)
+# ==========================
+
+# Compiled object files
+*.o
+*.obj
+
+# Precompiled headers
+*.gch
+*.pch
+
+# Compiled dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Compiled static libraries
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+a.out
+
+# Build directories
+bin/
+build/
+dist/
+CMakeFiles/
+cmake-build-*/
+CMakeCache.txt
+
+# Debug / core dumps
+*.dSYM/
+*.stackdump
+*.core
+
+# ==========================
+# VS Code
+# ==========================
 .vscode/
 
-### Mac OS ###
+# ==========================
+# OS specific
+# ==========================
 .DS_Store
+Thumbs.db
 
-### C++ build (scoped to cpp folder only) ###
-cpp/**/bin/
-cpp/**/build/
-cpp/**/*.o
-cpp/**/*.exe
-cpp/**/*.out
+# ==========================
+# General
+# ==========================
+# Backup / temp files
+*~
+*.swp
+*.swo
+
+# Logs
+*.log
